[Java] Add `--add-opens java.base/jdk.internal.misc=ALL-UNNAMED` to the codec generation tasks.